test for isomorphic library

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -1,4 +1,16 @@
 
+<button id="clear">clear</button><br>
+<button id="start">start</button><br>
+<button id="clone">clone</button><br>
+<button id="log">log</button><br>
+<button id="status">status</button><br>
+<button id="createNewFile">createFile</button><br>
+<button id="addFile">addFile</button><br>
+<button id="commit">commit</button><br>
+<button id="return">return</button><br>
+
+<button id="push">push</button><br>
+
 <div class="wb-frmvld">
   <form action="#" method="get" id="validation">
   <h2>{{ site.SchemaVersionCodeDesc[page.lang]  }}</h2>
