fix the error replace of undifined

--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -2,6 +2,7 @@
 <button id="clear">clear</button><br>
 <button id="start">start</button><br>
 <button id="clone">clone</button><br>
+<button id="config">config</button><br>
 <button id="log">log</button><br>
 <button id="status">status</button><br>
 <button id="createNewFile">createFile</button><br>
