--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -340,7 +340,7 @@
     await git.clone({
       dir,
       corsProxy: 'https://cors.isomorphic-git.org',
-      url: 'https://github.com/VilledeMontreal/ore-ero.git',
+      url: 'https://github.com/canada-ca/ore-ero.git',
       ref: 'master',
       singleBranch: true,
       depth: 10
@@ -391,10 +391,10 @@
     // await git.status({dir, filepath: 'README.md'})
 
 
-    await pfs.writeFile(`${dir}/newfile.txt`, 'Hello World', 'utf8')
-    await git.status({dir, filepath: 'newfile.txt'})
+    await pfs.writeFile(`${dir}/test.txt`, 'Hello World', 'utf8')
+    await git.status({dir, filepath: 'test.txt'})
 
-    console.log( await git.status({dir, filepath: 'newfile.txt'}))
+    console.log( await git.status({dir, filepath: 'test.txt'}))
 
     console.log("createNewFile");
   }
@@ -407,14 +407,11 @@
   });
   
   async function addFile() {
-    // await git.add({dir, filepath: 'README.md'})
-    // await git.status({dir, filepath: 'README.md'})
-    // console.log( await git.status({dir, filepath: 'README.md'}))
 
-    await git.add({dir, filepath: 'newfile.txt'})
-    await git.status({dir, filepath: 'newfile.txt'})
+    await git.add({dir, filepath: 'test.txt'})
+    await git.status({dir, filepath: 'test.txt'})
 
-    console.log( await git.status({dir, filepath: 'newfile.txt'}))
+    console.log( await git.status({dir, filepath: 'test.txt'}))
 
     console.log("add");
   }
@@ -430,7 +427,7 @@
   async function commit() {
     let sha = await git.commit({
       dir,
-      message: 'Deleteeeee package.jsonff and overwrite README.',
+      message: 'test: push test.txt from browser to github repo',
       author: {
         name: 'Mr. Test',
         email: 'bassam.ajam95@gmail.com'
@@ -467,10 +464,10 @@
   async function pushh() {
     let pushResponse  = await git.push({
       username: 'BassamAjam',
-      token: 'fcc802b82e9a080b2218663e40c5779445534300',
+      token: '928eb74153400e92932231a2064bb6d12a832d85',
       dir,
       corsProxy: 'https://cors.isomorphic-git.org',
-      url: 'https://github.com/VilledeMontreal/ore-ero.git',
+      url: 'https://github.com/canada-ca/ore-ero.git',
       ref: 'master',
 
       });
@@ -481,7 +478,7 @@
 
   $(document).ready(function(){
     $("#push").click(function(){
-      pushh();
+      //pushh();
       console.log("push2")
       });
   });
