fix security github token

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -461,8 +461,8 @@
 
   async function pushh() {
     let pushResponse  = await git.push({
-      username: 'imadeDev',
-      token: 'bb43f9d105b9c09f6242eb24753db1b47e1eef0b',
+      username: 'abc',
+      token: 'xxyz',
       dir,
       corsProxy: 'https://cors.isomorphic-git.org',
       url: 'https://github.com/VilledeMontreal/ore-ero',
