Update footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,31 +2,19 @@
 
 {% if page.lang == 'fr' %}
 <footer id="wb-info">
-  <nav class="container wb-navcurr">
+  <!--<nav class="container wb-navcurr">
     <h2 class="wb-inv">Au sujet du gouvernement</h2>
-    <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-      <li><a href="https://www.canada.ca/fr/contact.html">Contactez-nous</a></li>
-      <li><a href="https://www.canada.ca/fr/gouvernement/min.html">Ministères et organismes</a></li>
-      <li><a href="https://www.canada.ca/fr/gouvernement/fonctionpublique.html">Fonction publique et force militaire</a></li>
-      <li><a href="https://www.canada.ca/fr/nouvelles.html">Nouvelles</a></li>
-      <li><a href="https://www.canada.ca/fr/gouvernement/systeme/lois.html">Traités, lois et règlements</a></li>
-      <li><a href="https://www.canada.ca/fr/transparence/rapports.html">Rapports à l'échelle du gouvernement</a></li>
-      <li><a href="http://pm.gc.ca/fra">Premier ministre</a></li>
-      <li><a href="https://www.canada.ca/fr/gouvernement/systeme.html">Comment le gouvernement fonctionne</a></li>
-      <li><a href="http://ouvert.canada.ca/">Gouvernement ouvert</a></li>
-    </ul>
-  </nav>
+    ...
+  </nav>-->
   <div class="brand">
     <div class="container">
       <div class="row">
         <nav class="col-md-9 col-lg-10 ftr-urlt-lnk">
           <h2 class="wb-inv">À propos du site</h2>
           <ul>
-            <li><a href="https://www.canada.ca/fr/sociaux.html">Médias sociaux</a></li>
-            <li><a href="https://www.canada.ca/fr/mobile.html">Applications mobiles</a></li>
-            <li><a href="https://www1.canada.ca/fr/nouveausite.html">À propos de Canada.ca</a></li>
-            <li><a href="https://www.canada.ca/fr/transparence/avis.html">Avis</a></li>
-            <li><a href="https://www.canada.ca/fr/transparence/confidentialite.html">Confidentialité</a></li>
+            <li><a href="https://www.canada.ca/fr.html" target="_blank">Canada.ca</a></li>
+            <li><a href="https://www.canada.ca/fr/transparence/avis.html" target="_blank">Avis</a></li>
+            <li><a href="https://www.canada.ca/fr/transparence/confidentialite.html" target="_blank">Confidentialité</a></li>
           </ul>
         </nav>
         <div class="col-xs-6 visible-sm visible-xs tofpg">
@@ -41,31 +29,19 @@
 </footer>
 {% else %}
 <footer id="wb-info">
-  <nav class="container wb-navcurr">
+  <!--<nav class="container wb-navcurr">
     <h2 class="wb-inv">About government</h2>
-    <ul class="list-unstyled colcount-sm-2 colcount-md-3">
-      <li><a href="https://www.canada.ca/en/contact.html">Contact us</a></li>
-      <li><a href="https://www.canada.ca/en/government/dept.html">Departments and agencies</a></li>
-      <li><a href="https://www.canada.ca/en/government/publicservice.html">Public service and military</a></li>
-      <li><a href="https://www.canada.ca/en/news.html">News</a></li>
-      <li><a href="https://www.canada.ca/en/government/system/laws.html">Treaties, laws and regulations</a></li>
-      <li><a href="https://www.canada.ca/en/transparency/reporting.html">Government-wide reporting</a></li>
-      <li><a href="http://pm.gc.ca/eng">Prime Minister</a></li>
-      <li><a href="https://www.canada.ca/en/government/system.html">How government works</a></li>
-      <li><a href="http://open.canada.ca/en/">Open government</a></li>
-    </ul>
-  </nav>
+    ...
+  </nav>-->
   <div class="brand">
     <div class="container">
       <div class="row">
         <nav class="col-md-9 col-lg-10 ftr-urlt-lnk">
           <h2 class="wb-inv">About this site</h2>
           <ul>
-            <li><a href="https://www.canada.ca/en/social.html">Social media</a></li>
-            <li><a href="https://www.canada.ca/en/mobile.html">Mobile applications</a></li>
-            <li><a href="https://www1.canada.ca/en/newsite.html">About Canada.ca</a></li>
-            <li><a href="https://www.canada.ca/en/transparency/terms.html">Terms and conditions</a></li>
-            <li><a href="https://www.canada.ca/en/transparency/privacy.html">Privacy</a></li>
+            <li><a href="https://www.canada.ca/en.html" target="_blank">Canada.ca</a></li>
+            <li><a href="https://www.canada.ca/en/transparency/terms.html" target="_blank">Terms and conditions</a></li>
+            <li><a href="https://www.canada.ca/en/transparency/privacy.html" target="_blank">Privacy</a></li>
           </ul>
         </nav>
         <div class="col-xs-6 visible-sm visible-xs tofpg">
