Converted GitFileManager to class.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -94,6 +94,9 @@
 <script src="/ore-ero/assets/js/index.js"></script>
 <script>
 
+  const REPO_NAME = "{{ site.github_repository }}";
+  const USERNAME = "{{ site.github_username }}"
+
   var jLang = 0 ;
   var iTags = 0;
   var selectedAdminCode = "";
