--- a/_includes/ossSchema.html
+++ b/_includes/ossSchema.html
@@ -214,8 +214,8 @@
 
                     <li>
                     <details open>
-                        <summary>users [array]</summary>
-                        <p>The users who used the project</p>
+                        <summary>{{ site.UsersOssName[page.lang] }} [array]</summary>
+                        <p>{{ site.UsersOssDesc[page.lang] }}</p>
                     </details>
                     </li>
 
@@ -223,6 +223,14 @@
             </details>
             </li>
         </ul>
+    </details>
+    </li>
+
+    <li>
+    <details open> 
+        <summary>version [string]</summary>
+        <h5>{{ site.VersionName[page.lang] }}</h5>
+        <p>{{ site.VersionCodeDesc[page.lang] }}</p>
     </details>
     </li>
 </ul>
