--- a/_includes/header.html
+++ b/_includes/header.html
@@ -89,6 +89,14 @@
               <li><a href="./code-source-ouvert.html">{{ site.OpenSourceCode[page.lang] }}</a></li>
             {% endif %}
           {% endif %}
+
+          {% if page.ref == "ossSchema" %}
+            {% if page.lang == "en" %}
+              <li><a href="./open-source-software.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
+            {% else %}
+              <li><a href="./logiciels-libres.html">{{ site.OpenSourceSoftware[page.lang] }}</a></li>
+            {% endif %}
+          {% endif %}
         </ol>
     </div>
   </nav>
