fix a field name

--- a/_includes/ossSchema.html
+++ b/_includes/ossSchema.html
@@ -214,7 +214,7 @@
 
                     <li>
                     <details open>
-                        <summary>{{ site.UsersOssName[page.lang] }} [array]</summary>
+                        <summary>users [array]</summary>
                         <p>{{ site.UsersOssDesc[page.lang] }}</p>
                     </details>
                     </li>
