Added references to new packages.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -90,6 +90,8 @@
 <script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
 <script src="https://unpkg.com/@isomorphic-git/lightning-fs"></script>
 <script src="https://unpkg.com/isomorphic-git"></script>
+<script type="text/javascript" src="/ore-ero/assets/js/yaml.min.js"></script>
+<script src="/ore-ero/assets/js/deep-object.js"></script>
 <script src="/ore-ero/assets/js/git-file-manager.js"></script>
 <script src="/ore-ero/assets/js/index.js"></script>
 <script>
