Added global variable for pr bot.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,7 +95,8 @@
 <script>
 
   const REPO_NAME = "{{ site.github_repository }}";
-  const USERNAME = "{{ site.github_username }}"
+  const USERNAME = "{{ site.github_username }}";
+  const PRBOT_URL = "{{ site.prbot_url }}"
 
   var jLang = 0 ;
   var iTags = 0;
