Resolved htmlproofer issues.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -88,15 +88,15 @@
 <script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/ie8-wet-boew2.min.js"></script>
 <![endif]-->
 <script src="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/js/theme.min.js"></script>
-<script type="text/javascript" src="/ore-ero/assets/js/yaml.min.js"></script>
-<script src="/ore-ero/assets/js/deep-object.js"></script>
-<script src="/ore-ero/assets/js/git-file-manager.js"></script>
-<script src="/ore-ero/assets/js/index.js"></script>
+<script type="text/javascript" src="../assets/js/yaml.min.js"></script>
+<script type="text/javascript" src="../assets/js/deep-object.js"></script>
+<script type="text/javascript" src="../assets/js/git-file-manager.js"></script>
+<script type="text/javascript" src="../assets/js/index.js"></script>
 <script>
 
   const REPO_NAME = "{{ site.github_repository }}";
   const USERNAME = "{{ site.github_username }}";
-  const PRBOT_URL = "{{ site.prbot_url }}"
+  const PRBOT_URL = "{{ site.prbot_url }}";
 
   var jLang = 0 ;
   var iTags = 0;
