--- a/_includes/codeForm.html
+++ b/_includes/codeForm.html
@@ -1,4 +1,3 @@
-
 <div class="wb-frmvld">
   <form action="#" method="get" id="validation">
   <h2>{{ site.SchemaVersionCodeDesc[page.lang]  }}</h2>
@@ -6,41 +5,37 @@
       <label for="shemaVersion" class="required">{{ site.SchemaVersionCode[page.lang] }}</label>
       <input class="form-control" id="shemaVersion" name="shemaVersion" type="text" readonly="readonly" required="required" value="1.0"/>
     </div>
-          
+
+  
+
   <h2>{{ site.AdminCodeDesc[page.lang] }}</h2>
-    <div class="form-group">
-      <label for="adminCode" class="required">{{ site.AdminCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
-      <select class="form-control" id="adminCode" name="adminCode" required="required">
-        <option value="">&nbsp;</option>
-        {% assign admin_array = "" | split: ',' %}
-        {% for fptms in site.data.code %}
-          {% assign fptm = fptms[1] %}
-          {% for admins in fptm %}
-            {% assign admin = admins[1] %}   
-            {% assign aName = site.data.administrations.federal | where: "code", admin.adminCode %}
-            {% if aName[0].name[page.lang] != nil %}
-              <option value="{{ aName[0].code }}">{{ aName[0].name[page.lang] }}</option>
-            {% endif %}
-          {% endfor %}
-          
-          {% for admins in fptm %}
-            {% assign admin = admins[1] %}   
-            {% assign aName = site.data.administrations.provincial | where: "code", admin.adminCode %}
-            {% if aName[0].name[page.lang] != nil %}
-              <option value="{{ aName[0].code }}">{{ aName[0].name[page.lang] }}</option>
-            {% endif %}
-          {% endfor %}
-          
-          {% for admins in fptm %}
-            {% assign admin = admins[1] %}   
-            {% assign aName = site.data.administrations.municipal | where: "code", admin.adminCode %}
-            {% if aName[0].name[page.lang] != nil %}
-              <option value="{{ aName[0].code }}">{{ aName[0].name[page.lang] }}</option>
-            {% endif %}
-          {% endfor %}
+  <div class="form-group">
+    <label for="adminCode" class="required">{{ site.AdminCode[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+    <select class="form-control" id="adminCode" name="adminCode" required="required">
+      <option value="">&nbsp;</option>
+      <optgroup label="Federal">
+        {% for org in site.data.administrations.federal %}
+          {% if org.name[page.lang] != nil %}
+            <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
+          {% endif %}
         {% endfor %}
-      </select>
-    </div>
+      </optgroup>
+      <optgroup label="Provincial">
+        {% for org in site.data.administrations.provincial %}
+          {% if org.name[page.lang] != nil %}
+            <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
+          {% endif %}
+        {% endfor %}
+      </optgroup>
+      <optgroup label="Municipal">
+        {% for org in site.data.administrations.municipal %}
+          {% if org.name[page.lang] != nil %}
+            <option value="{{ org.code }}">{{ org.name[page.lang] }}</option>
+          {% endif %}
+        {% endfor %}
+      </optgroup>
+    </select>
+  </div>
   
   <div id="selectedProject" class="form-group"></div>
 
@@ -252,7 +247,7 @@
       <label for="versionProject">{{ site.VersionName[page.lang] }}</label>
       <input class="form-control" id="versionProject" name="versionProject" type="text" />
     </div>
-  
+    <button id="prbotSubmit" type="button" class="btn btn-default">Submit</button>
   </form>
   </div>
   
