--- a/_includes/ossSchema.html
+++ b/_includes/ossSchema.html
@@ -220,12 +220,12 @@
                     </li>
 
                     <li>
-                    <details open>
-                        <summary>users [array]</summary>
-                        <p>{{ site.UsersOssDesc[page.lang] }}</p>
+                    <details open> 
+                        <summary>status [string]</summary>
+                        <h5>{{ site.StatusName[page.lang] }}</h5>
+                        <p>{{ site.StatusCodeDesc[page.lang] }}</p>
                     </details>
                     </li>
-
                 </ul>
             </details>
             </li>
